docs: harden agent example drift gates